# jadetree-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: check-python.yml  deploy-docker.yml
config/: test.py
docker/: config.py  docker-entry.sh  postgres.env
docs/: conf.py  config.rst  dev.rst  index.rst  make.bat
jadetree/: __init__.py  __main__.py  cli.py  exc.py  factory.py  logging.py  mail.py  settings.py  setup.py  socketio.py  wsgi.py
jadetree/api/: __init__.py
jadetree/database/: orm.py  (+4 more)
migrations/: env.py  script.py.mako
mjml/: Makefile  adm-error.mjml  gulpfile.mjml.js  package.json  reg-verify.mjml  reg-welcome.mjml
scripts/: load_base_db.py  load_core_db.py  load_qif.py  load_test_transactions.py
tests/: conftest.py  helpers.py  test_01_db_makeuri.py  test_02_frontend_urls.py  test_11_user_model.py  test_12_transaction_rules.py  test_13_transaction_basic.py  test_14_transaction_foreign.py  test_15_transaction_complex.py  test_16_budget_model.py  test_21_svc_validator.py  test_22_svc_auth_jwt.py  test_31_auth_service.py  test_32_user_service.py  test_33_budget_service.py  test_34_account_service.py  test_35_ledger_service.py  test_41a_version_api_no_db.py  test_41b_version_api.py  test_42_setup_api.py  test_42a_setup_api.py  test_43a_auth_api_personal.py  test_43b_auth_api_family.py  test_43c_auth_api_public.py  test_43d_auth_api_confirmation.py  test_44a_onboard_user.py  tox.ini
(+82 files in other folders)
