[tool.poetry]
name = "JadeTree"
version = "0.9.17a"
description = "Jade Tree Budgeting Platform Backend"
authors = ["Jonathan Krauss <jkrauss@asymworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.3"
arrow = "^0.17.0"
Babel = "^2.9.0"
eventlet = "^0.29.1"
Flask = "^1.1.2"
Flask-Cors = "^3.0.9"
Flask-HTTPAuth = "^4.2.0"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^2.5.3"
flask-smorest = "^0.25.0"
Flask-SocketIO = "^4.3.2"
Flask-SQLAlchemy = "^2.4.4"
marshmallow = "^3.9.1"
marshmallow-enum = "^1.5.1"
mysqlclient = "^2.0.1"
psycopg2 = "^2.8.6"
PyJWT = "^1.7.1"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
flake8 = "^3.8.4"
PyJWT = {extras = ["crypto"], version = "^1.7.1"}
pytest = "^5.2"
Sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
sphinx-rtd-theme = "^0.5.0"
isort = "^5.7.0"
bandit = "^1.7.0"
pyupgrade = "^2.7.4"
codespell = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
